--- a/SQLite_Sinh_Vien/app/src/main/res/layout/list_item_sinhvien.xml
+++ b/SQLite_Sinh_Vien/app/src/main/res/layout/list_item_sinhvien.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    
+    <ImageView
+        android:id="@+id/iv_gioitinh"
+        android:src="@drawable/sv1"
+        android:layout_width="150dp"
+        android:layout_height="150dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </ImageView>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_masv"
+            android:text="Mã SV"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></TextView>
+
+        <TextView
+            android:id="@+id/tv_hoten"
+            android:text="HoTen"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></TextView>
+        <TextView
+            android:id="@+id/tv_dienthoai"
+            android:text="Điện thoai"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></TextView>
+
+
+        <TextView
+            android:id="@+id/tv_email"
+            android:text="Email"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></TextView>
+
+    </LinearLayout>
+
+
+</LinearLayout>
